# badge-elf-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  install_toolchain.sh  metadata.json
assets/: metadata.json
sdk/: CMakeLists.txt  sdk.cmake
sdk/emulator/: audio.c  display.c  err.c  http.c  input.c  log.c
sdk/emulator/include/: emulator.h
sdk/emulator/src/: audio.c  device.c  display.c  emulator.c  err.c  file.c  input.c  led.c  orientation.c  pax_log_compat.c  power.c
sdk/include/asp/: err.h  input_types.h
src/: main.c
